force-app/main/default/objects/ArrivalInfo__c/ArrivalInfo__c.object-meta.xml
<CustomObject>
    <label>入庫</label>
    <nameField>
        <displayFormat>ARR-{00000000}</displayFormat>
        <label>入庫#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>