force-app/main/default/objects/ArrivalInfo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>荷主</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>入庫</relationshipLabel>
    <relationshipName>WarehouseEntries</relationshipName>
    <type>Lookup</type>
</CustomField>