force-app/main/default/objects/ArrivalInfo__c/fields/ArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDate__c</fullName>
    <label>入庫日</label>
    <type>Date</type>
</CustomField>