force-app/main/default/objects/ArrivalInfo__c/fields/BeforeNameChangeAccount__c.field-meta.xml
<CustomField>
    <fullName>BeforeNameChangeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>名義変更前荷主</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>入庫 (名義変更前荷主)</relationshipLabel>
    <relationshipName>ArrivalInfoList</relationshipName>
    <type>Lookup</type>
</CustomField>