force-app/main/default/objects/ArrivalInfo__c/fields/CalculationStartDate__c.field-meta.xml
<CustomField>
    <fullName>CalculationStartDate__c</fullName>
    <label>起算日</label>
    <type>Date</type>
</CustomField>