force-app/main/default/objects/ArrivalInfo__c/fields/ClientSlipNumber__c.field-meta.xml
<CustomField>
    <fullName>ClientSlipNumber__c</fullName>
    <label>客先伝票NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>