force-app/main/default/objects/ArrivalInfo__c/fields/HandlingCargoCostFreeFlag__c.field-meta.xml
<CustomField>
    <fullName>HandlingCargoCostFreeFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>入庫料無料</label>
    <type>Checkbox</type>
</CustomField>