force-app/main/default/objects/ArrivalInfo__c/fields/HandlingDelivery__c.field-meta.xml
<CustomField>
    <fullName>HandlingDelivery__c</fullName>
    <label>扱便</label>
    <length>255</length>
    <type>Text</type>
</CustomField>