force-app/main/default/objects/ArrivalInfo__c/fields/InputType__c.field-meta.xml
<CustomField>
    <fullName>InputType__c</fullName>
    <label>入力区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>