force-app/main/default/objects/ArrivalInfo__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>ＮＯ</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>