force-app/main/default/objects/ArrivalInfo__c/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <label>個口</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>