force-app/main/default/objects/ArrivalInfo__c/fields/ShippingOrderHeader__c.field-meta.xml
<CustomField>
    <fullName>ShippingOrderHeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>有償（元）出庫用注文のリンク</description>
    <label>出庫用注文</label>
    <referenceTo>OrderHeader__c</referenceTo>
    <relationshipLabel>入庫</relationshipLabel>
    <relationshipName>ArrivalInfoList</relationshipName>
    <type>Lookup</type>
</CustomField>