force-app/main/default/objects/ArrivalInfo__c/fields/SlipNumber__c.field-meta.xml
<CustomField>
    <fullName>SlipNumber__c</fullName>
    <label>伝票番号</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>