force-app/main/default/objects/ArrivalInfo__c/fields/SlipType__c.field-meta.xml
<CustomField>
    <fullName>SlipType__c</fullName>
    <label>伝票区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>通常入庫</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>仮入庫</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>名義変更</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>