force-app/main/default/objects/ArrivalInfo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>予定</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>済み</label>
            </value>
            <value>
                <fullName>入力</fullName>
                <isActive>false</isActive>
                <label>入力</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>