force-app/main/default/objects/ArrivalInfo__c/fields/Summarize1__c.field-meta.xml
<CustomField>
    <fullName>Summarize1__c</fullName>
    <label>摘要1</label>
    <type>TextArea</type>
</CustomField>