force-app/main/default/objects/ArrivalInfo__c/fields/Summarize2__c.field-meta.xml
<CustomField>
    <fullName>Summarize2__c</fullName>
    <label>摘要2</label>
    <type>TextArea</type>
</CustomField>