force-app/main/default/objects/ArrivalInfo__c/fields/Summarize3__c.field-meta.xml
<CustomField>
    <fullName>Summarize3__c</fullName>
    <label>摘要3</label>
    <type>TextArea</type>
</CustomField>