force-app/main/default/objects/ArrivalInfo__c/fields/WarehouseMaster__c.field-meta.xml
<CustomField>
    <fullName>WarehouseMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>入庫先</label>
    <referenceTo>WarehouseMaster__c</referenceTo>
    <relationshipLabel>入庫</relationshipLabel>
    <relationshipName>WarehouseEntries</relationshipName>
    <type>Lookup</type>
</CustomField>